[package]
name = "git-assist"
description = "A suite of friendly assistive git commands"
repository = "https://github.com/regexident/git-assist"
categories = ["command-line-utilities"]
keywords = ["git", "bisect"]
license = "MPL-2.0"
edition = "2021"
version = "0.2.0"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive"] }
git-url-parse = "0.4.5"
git2 = "0.20.1"
thiserror = "1.0.69"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

# Binary-only:
inquire = "0.7.5"
secrecy = "0.10.3"
shellexpand = "3.1.1"

# Github support:
jsonwebtoken = { version = "9.3.1", optional = true }
octocrab = { version = "0.44.0", features = ["stream"], optional = true }

# Breakage fixes
num-bigint = ">=0.4.6" # fixes breakage in octocrab
time = ">=0.3.41" # fixes breakage in octocrab
serde = ">=1.0.185" # fixes breakage in octocrab
openssl = ">=0.10.72" # fixes breakage in git2

[features]
default = ["github"]
github = ["jsonwebtoken", "octocrab"]
