[package]
name = "git-assist"
description = "A suite of friendly assistive git commands"
repository = "https://github.com/regexident/git-assist"
categories = ["command-line-utilities"]
keywords = ["git", "bisect"]
license = "MPL-2.0"
edition = "2021"
version = "0.3.1"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive"] }
git-url-parse = "0.6.0"
git2 = "0.20.1"
thiserror = "2.0.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

# Binary-only:
inquire = "0.9.0"
secrecy = "0.10.3"
shellexpand = "3.1.1"

# Github support:
jsonwebtoken = { version = "10.0.0", optional = true }
octocrab = { version = "0.49.0", features = ["stream"], optional = true }

# Transitive dependency version constraints to ensure minimal-versions compatibility:
# These pins ensure that when cargo resolves minimal versions (cargo minimal-versions),
# the selected versions are actually compatible. Without these constraints, cargo would
# select older versions that fail to compile with current Rust or have incompatible APIs.
num-bigint = ">=0.4.6" # Older versions have compilation errors with current Rust
time = ">=0.3.41" # Required for chrono/jsonwebtoken compatibility
serde = ">=1.0.185" # Required for octocrab and related crates
openssl = ">=0.10.72" # Older versions have build script failures
getset = ">=0.1.6" # Required for git-url-parse compatibility

[features]
default = ["github"]
github = ["jsonwebtoken", "octocrab"]
